--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#ed9600</color>
 
     <color name="colorPrimaryViolet">#72467B</color>
+    <color name="colorLightGrey">#b9b9b9</color>
 </resources>
