--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="parent_padding">10dp</dimen>
     <dimen name="row_padding">5dp</dimen>
+    <dimen name="list_icon_size">25dp</dimen>
+    <dimen name="checkbox_size">35dp</dimen>
 </resources>
